--- a/build.gradle
+++ b/build.gradle
@@ -148,7 +148,7 @@ dependencies {
     implementation fg.deobf("curse.maven:simple-magnets-394140:5828475")
     runtimeOnly fg.deobf("curse.maven:supermartijn642s-core-lib-454372:5668859")
     runtimeOnly fg.deobf("curse.maven:supermartijn642s-config-lib-438332:4715408")
-
+    runtimeOnly fg.deobf("curse.maven:ender-io-64578:5858176")
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
 
 }
